--- a/.env.minio.example
+++ b/.env.minio.example
@@ -1,5 +1,5 @@
 # MinIO Configuration
-# Copy this file to .env.minio and update the values
+# These variables are used by Docker Compose to build the configuration
 
 # Root User Credentials (CHANGE THESE!)
 MINIO_ROOT_USER=minioadmin
@@ -16,10 +16,3 @@ MINIO_DOMAIN=localhost
 
 # Browser Redirect URL
 MINIO_BROWSER_REDIRECT_URL=http://localhost:9001
-
-# Optional: Notify webhook for events
-# MINIO_NOTIFY_WEBHOOK_ENDPOINT=http://your-app:8000/webhook/minio
-# MINIO_NOTIFY_WEBHOOK_ENABLE=on
-
-# Optional: Enable TLS (requires certificates)
-# MINIO_OPTS=--certs-dir /root/.minio/certs
